fixed text color bug in hero on small screens

--- a/src/organisms/hero/_hero.scss
+++ b/src/organisms/hero/_hero.scss
@@ -47,7 +47,10 @@
 	}
 
 	@include e(text) {
-		color: $color-snow;
+
+		@include bp-up(sm) {
+			color: $color-snow;
+		}
 
 		@include bp-up(md) {
 			max-width: 80%;
